--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <nav class="container">
         <div class="row my-lg-5 my-md-5 my-sm-5">
          
-            <div class="col col-sm-12 col-md-12 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex flex-column align-items-center justify-content-sm-center align-items-sm-center">
               <a href=""> <img class="img-fluid" src="assets/img/logo2.png" alt="" /></a>
             </div>
 
-            <div class="col col-sm-12 col-md-12 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center">
               <ul
-                class="d-flex flex-sm-column flex-lg-row justify-content-sm-center align-items-sm-center list-unstyled "
+                class="d-flex flex-column align-items-center flex-sm-column flex-lg-row justify-content-sm-center align-items-sm-center list-unstyled "
               >
                 <li >
                   <a class="nav-link px-lg-3 px-md-3 px-sm-3 active" aria-current="page" href="#">
@@ -67,7 +67,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col col-sm-12 col-md-12 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center">
                <button
               class="border-0 rounded-2 text-white fw-bold py-4 px-5 l btn-color"
             >
@@ -84,13 +84,13 @@
        <section class="legal-solution">
         <div class="container ">
           <div class="row ">
-            <div class=" col-sm-12 col-md-12 col-lg-12 d-flex flex-md-column flex-sm-column justify-content-md-center 
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 d-flex flex-md-column flex-sm-column justify-content-md-center 
              justify-content-sm-center align-items-sm-center align-items-md-center  my-5 flex-sm-column"
             >
               
-                <div class="d-flex flex-md-column flex-sm-column justify-content-md-center 
+                <div class="d-flex flex-md-column flex-sm-column justify-content-center align-items-center justify-content-md-center 
              justify-content-sm-center align-items-sm-center align-items-md-center  flex-sm-column">
-                  <h1 class=" text-white text-center px-5 my-5 legal-heading fs-2  fw-bold">
+                  <h1 class="align-items-center text-white text-center px-5 my-5 legal-heading fs-2  fw-bold">
                   We Provide Effective <br> Legal Solutions
                 </h1>
                 </div>
@@ -129,9 +129,9 @@
           <p class="text-center mx-lg-5 my-lg-5 ">There are many variations of passages of Lorem Ipsum available, but the majority <br> have suffered alteration in some form, by injected humour.</p>
           <div class="row">
             <div
-              class="col col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
+              class="col-12 col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
             >
-              <img class="img-fluid" src="assets/img/business.png" alt="" />
+              <img class="img-fluid " src="assets/img/business.png" alt="" />
               <h2>Business Law</h2>
               <p class="color1">
                 There are many variations of passages of Lorem Ipsum available,
@@ -142,7 +142,7 @@
             </div>
 
             <div
-              class="col col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
+              class="col-12 col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
             >
               <img class="img-fluid" src="assets/img/criminal.png" alt="" />
               <h2>Criminal Law</h2>
@@ -155,7 +155,7 @@
             </div>
 
             <div
-              class="col col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
+              class="col-12 col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
             >
               <img class="img-fluid" src="assets/img/child.png" alt="" />
               <h2>Child Law</h2>
@@ -167,7 +167,7 @@
               <i class="fa-solid fa-circle-right"></i>
             </div>
             <div
-              class="col col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
+              class="col-12 col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
             >
               <img class="img-fluid" src="assets/img/education.png" alt="" />
               <h2>Education Law</h2>
@@ -179,7 +179,7 @@
               <i class="fa-solid fa-circle-right"></i>
             </div>
             <div
-              class="col col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
+              class="col-12 col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
             >
               <img class="img-fluid" src="assets/img/divorce.png" alt="" />
               <h2>Divorce Law</h2>
@@ -191,7 +191,7 @@
               <i class="fa-solid fa-circle-right"></i>
             </div>
             <div
-              class="col col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
+              class="col-12 col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center"
             >
               <img class="img-fluid" src="assets/img/tax.png" alt="" />
               <h2>Tax Law</h2>
@@ -315,8 +315,8 @@
         <div class="container">
           <h1 class="text-capitalize text-center my-5">freequently asked any questions</h1>
           <p class="fs-6 text-center mx-5 px-5 my-5">Frequently Asked Questions (FAQ) pages contain a list of commonly asked questions and answers on a website about topics such as hours, shipping and handling, product information, and return policies.</p>
-          <div class="row flex-sm-column-reverse flex-lg-row align-items-sm-center ">
-            <div class="col-sm-6 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
+          <div class="row flex-column-reverse flex-sm-column-reverse flex-lg-row align-items-sm-center ">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
               <div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingOne">
