--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <nav class="container">
         <div class="row my-lg-5 my-md-5 my-sm-5">
          
-            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex flex-column align-items-center justify-content-center justify-content-sm-center align-items-sm-center">
-              <a href=""> <img class="img-fluid" src="assets/img/logo2.png" alt="" /></a>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex align-items-center justify-content-center justify-content-sm-center align-items-sm-center">
+              <a href=""> <img class="img-fluid " src="assets/img/logo2.png" alt="" /></a>
             </div>
 
             <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex flex-column  justify-content-sm-center align-items-sm-center">
@@ -68,21 +68,39 @@
               </ul>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-flex flex-column justify-content-sm-center align-items-sm-center">
-               <button
-              class="border-0 rounded-2 text-white fw-bold py-4 px-5 l btn-color"
-            >
-              Free Consultation
-            </button>
+              <!-- Button trigger modal -->
+<button type="button" class="border-0 rounded-2 text-white fw-bold py-4 px-5 l btn-color" data-bs-toggle="modal" data-bs-target="#exampleModal">
+ Free Consultation
+</button>
 
-            </div>
-           
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Prove Your Idea</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Welcome to our site
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+      </div>           
           </div>
         </div>
       </nav>
     </section>
+
+
     <main>
       <!-- banner section -->
-       <header class="container mx-auto my-5">
+       <header class="container mx-auto my-5 rounded-2">
       <div class="banner">
         <h1 class="fw-bold text-center">
           We Provide Effective <br />
@@ -123,9 +141,7 @@
               <img class="img-fluid" src="assets/img/business.png" alt="" />
               <h2>Business Law</h2>
               <p class="color1">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+               The types of business law include formation law, employment law, intellectual property law, contract law and negotiations, taxes, lawsuits, bankruptcy laws, and anti-trust laws.
               </p>
               <i class="fa-solid fa-circle-right"></i>
             </div>
@@ -136,9 +152,7 @@
               <img class="img-fluid" src="assets/img/criminal.png" alt="" />
               <h2>Criminal Law</h2>
               <p class="color1">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+               The types of business law include formation law, employment law, intellectual property law, contract law and negotiations, taxes, lawsuits, bankruptcy laws, and anti-trust laws.
               </p>
               <i class="fa-solid fa-circle-right"></i>
             </div>
@@ -149,9 +163,7 @@
               <img class="img-fluid" src="assets/img/child.png" alt="" />
               <h2>Child Law</h2>
               <p class="color1">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+               As per the law children shall not be sentenced to death. The duration of the penalty of the children would not exceed the maximum period rather children can be detained...
               </p>
               <i class="fa-solid fa-circle-right"></i>
             </div>
@@ -161,9 +173,7 @@
               <img class="img-fluid" src="assets/img/education.png" alt="" />
               <h2>Education Law</h2>
               <p class="color1">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+                In Bangladesh, all citizens must undertake ten years of compulsory education which consists of five years at primary school level and five years at high school level. Primary and secondary...
               </p>
               <i class="fa-solid fa-circle-right"></i>
             </div>
@@ -173,9 +183,7 @@
               <img class="img-fluid" src="assets/img/divorce.png" alt="" />
               <h2>Divorce Law</h2>
               <p class="color1">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+               No decree shall hereafter be made for a divorce a mensa et toro, but the husband or wife may obtain a decree of judicial separation, on the ground of adultery, or cruelty, or desertion without reasonable ....
               </p>
               <i class="fa-solid fa-circle-right"></i>
             </div>
@@ -185,9 +193,7 @@
               <img class="img-fluid" src="assets/img/tax.png" alt="" />
               <h2>Tax Law</h2>
               <p class="color1">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+               The tax law imposes income tax at 25 percent on listed entities and 32.5 percent for non-listed entities. Corporate tax rate changes announced this year include: an additional surcharge of 2.5 ...
               </p>
               <i class="fa-solid fa-circle-right"></i>
             </div>
@@ -195,7 +201,7 @@
         </div>
       </section>
       <!-- carousel -->
-      <section class="container">
+      <section class="container ">
          <div
       id="carouselExampleInterval"
       class="carousel slide"
@@ -229,11 +235,11 @@
           aria-label="Slide 4"
         ></button>
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner ">
         <h1 class="text-capitalize text-center">what our client say</h1>
         <p class="text-center px-5 mx-5 py-5">Client experiences​​ We believe that the strongest proof we can present of us delivering on our service promises.</p>
         <div class="carousel-item active c-item" data-bs-interval="3000">
-          <img src="assets/img/slider-1.jpg" class="d-block w-100 c-img" alt="..." />
+          <img src="assets/img/slider-1.jpg" class="d-block w-100 rounded-1 c-img" alt="..." />
           <div class="carousel-caption ">
             <img class="img-fluid rounded-circle w-25" src="assets/img/comments1.jpg" alt="">
             <h5 class="fs-1 text-white">M Mortaza</h5>
@@ -244,7 +250,7 @@
           </div>
         </div>
         <div class="carousel-item c-item" data-bs-interval="3000">
-          <img    src="assets/img/slider-2.jpg" class="d-block w-100 c-img" alt="..." />
+          <img    src="assets/img/slider-2.jpg" class="d-block w-100 rounded-1 c-img" alt="..." />
           <div class="carousel-caption ">
             <img class="img-fluid rounded-circle w-25"  src="assets/img/comments2.jpg" alt="">
             <h5 class="fs-1 text-white">MSI Khan</h5>
@@ -255,7 +261,7 @@
           </div>
         </div>
         <div class="carousel-item c-item" data-bs-interval="3000">
-          <img src="assets/img/slider-3.jpg" class="d-block w-100 c-img" alt="..." />
+          <img src="assets/img/slider-3.jpg" class="d-block w-100 rounded-1 c-img" alt="..." />
           <div class="carousel-caption ">
             <img class="img-fluid rounded-circle w-25" src="assets/img/comments3.jpg" alt="">
             <h5 class="fs-1">S Alim Khan</h5>
@@ -266,7 +272,7 @@
           </div>
         </div>
         <div class="carousel-item c-item " data-bs-interval="3000">
-          <img src="assets/img/slider-2.jpg" class="d-block w-100 c-img" alt="..." />
+          <img src="assets/img/slider-2.jpg" class="d-block w-100 rounded-1 c-img" alt="..." />
           <div class="carousel-caption ">
             <img class="img-fluid rounded-circle w-25" src="assets/img/comments4.jpg" alt="">
             <h5 class="fs-1 text-white">Shamsia Alima</h5>
@@ -310,49 +316,47 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingOne">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-        What is HTML?
+        1. What is the difference between flex box and grid?
       </button>
     </h2>
     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">HTML is an acronym which stands for Hyper Text Markup Language which is used for creating web pages and web applications. Let's see what is meant by Hypertext Markup Language, and Web page.</div>
+      <div class="accordion-body">Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.</div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-        What is CSS?
+        2. What is the purpose of Media Quary?
       </button>
     </h2>
     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">CSS stands for Cascading Style Sheets. It is a style sheet language which is used to describe the look and formatting of a document written in markup language. It provides an additional feature to HTML. It is generally used with HTML to change the style of web pages and user interfaces. It can also be used with any kind of XML documents including plain XML, SVG and XUL.</div>
+      <div class="accordion-body">Media queries are a key part of responsive web design, as they allow you to create different layouts depending on the size of the viewport, but they can also be used to detect other things about the environment your site is running on, for example whether the user is using a touchscreen rather than a mouse.</div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-        What is bootstrap?
+        3. What is CSS box model and how does it's work?
       </button>
     </h2>
     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It contains HTML, CSS and JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components.</div>
+      <div class="accordion-body">The CSS box model is a container that contains multiple properties including borders, margin, padding, and the content itself. It is used to create the design and layout of web pages. According to the CSS box model, the web browser supplies each element as a square prism.</div>
     </div>
   </div>
    <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingFour">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-        What Is JavaScript? 
+        4. What is semantic tags? 
       </button>
     </h2>
     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">JavaScript is a lightweight programming language that web developers commonly use to create more dynamic interactions when developing web pages, applications, servers, and or even games.
-
-Developers generally use JavaScript alongside HTML and CSS The scripting language works well with CSS in formatting HTML elements. However, JavaScript still maintains user interaction, something that CSS cannot do by itself.</div>
+      <div class="accordion-body">Semantic HTML tags are tags that define the meaning of the content they contain. For example, tags like header, article, and footerare semantic HTML tags. They clearly indicate the role of the content they contain. On the other hand, tags like<div> and <span> are typical examples of non-semantic HTML elements.</div>
     </div>
   </div>
    <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingFive">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-        How to Learn Programming?
+        5. How to Learn Programming?
       </button>
     </h2>
     <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
@@ -361,6 +365,7 @@ Developers generally use JavaScript alongside HTML and CSS The scripting languag
 Rarely do prospective developers start with a roadmap a bird's eye view of the coding world that outlines a set of relevant programming concepts, languages, and tools that almost 100% of developers use every day.</div>
     </div>
   </div>
+</div>
 </div>
 
             </div>
