--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         ></button>
       </div>
       <div class="carousel-inner ">
-        <h1 class="text-capitalize text-center">what our client say</h1>
+        <h1 class="text-capitalize text-center"> client say</h1>
         <p class="text-center px-5 mx-5 py-5">Client experiences​​ We believe that the strongest proof we can present of us delivering on our service promises.</p>
         <div class="carousel-item active c-item" data-bs-interval="3000">
           <img src="assets/img/slider-1.jpg" class="d-block w-100 rounded-1 c-img" alt="..." />
