--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <a href="" class="text-center"
             ><button
-              class="text-white bg-warning mt-3 px-5 py-2 border-0 rounded-1"
+              class="text-white contact-btn-color mt-3 px-5 py-2 border-0 rounded-1"
             >
               Search
             </button></a
